--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -125,6 +125,24 @@
             synth.speak(utterance);
         }
 
+// Verificar se o idioma "en-US" está disponível no sintetizador
+function checkSpeechSynthesisLanguage() {
+    const voices = window.speechSynthesis.getVoices();
+    const hasEnglishUS = voices.some((voice) => voice.lang === "en-US");
+
+    if (!hasEnglishUS) {
+        alert("English (US) voice not available on your browser. Please enable or install it for better experience.");
+        console.warn("English (US) voice not available. Default voice will be used.");
+    }
+}
+
+// Garantir que as vozes estão carregadas antes de verificar
+if (speechSynthesis.onvoiceschanged !== undefined) {
+    speechSynthesis.onvoiceschanged = checkSpeechSynthesisLanguage;
+} else {
+    checkSpeechSynthesisLanguage();
+}
+
         // Configurar reconhecimento de voz
         function setupSpeechRecognition() {
             if (!('SpeechRecognition' in window || 'webkitSpeechRecognition' in window)) {
