--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -38,7 +38,7 @@
             50% { transform: scale(1.1); }
             100% { transform: scale(1); }
         }
-  #back-button {
+        #back-button {
             margin-top: 10px;
             background-color: black;
             color: white;
@@ -79,13 +79,11 @@
         };
         firebase.initializeApp(firebaseConfig);
 
-// Configurar funcionalidade do botão "Back"
+        // Configurar funcionalidade do botão "Back"
         document.getElementById("back-button").addEventListener("click", () => {
             window.history.back(); // Voltar para a página anterior
         });
-    </script>
 
-    <script>
         const ROBOT_GIF = "../../imagens/robo1.gif";
         const ROBOT_STATIC = "../../imagens/robo1_static.png";
         const ROBOT_ALTERNATE = "../../imagens/robo2.gif";
@@ -194,7 +192,10 @@
                 recognition.onresult = async (event) => {
                     resetStaticTimer();
                     const userSpeech = event.results[0][0].transcript;
+
+                    messageElement.style.visibility = "visible";
                     messageElement.innerText = `You said: ${userSpeech}`;
+
                     try {
                         const response = await fetch('/api/chat', {
                             method: 'POST',
@@ -202,10 +203,14 @@
                             body: JSON.stringify({ message: userSpeech }),
                         });
                         const data = await response.json();
+
+                        messageElement.style.visibility = "visible";
                         messageElement.innerText = data.response;
+
                         speak(data.response);
                     } catch (error) {
                         console.error("Error communicating with the server:", error);
+                        messageElement.style.visibility = "visible";
                         messageElement.innerText = "Error communicating with the server.";
                     }
                 };
@@ -222,7 +227,8 @@
                     try {
                         const response = await fetch(`/api/start?uid=${userId}`);
                         const data = await response.json();
-                        messageElement.style.visibility = "hidden";
+
+                        messageElement.style.visibility = "visible";
                         messageElement.innerText = data.response;
 
                         speakButton.innerText = "Press to Start";
@@ -235,8 +241,12 @@
                             }
                         });
                     } catch (error) {
+                        messageElement.style.visibility = "visible";
                         messageElement.innerText = "Error initializing conversation.";
                     }
+                } else {
+                    messageElement.style.visibility = "visible";
+                    messageElement.innerText = "Please log in to start the conversation.";
                 }
             });
         }
