--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -224,8 +224,7 @@ button {
         }
 
 async function initializeConversation() {
-    // Garante que a mensagem inicial está oculta ao carregar a página
-    messageElement.style.visibility = "hidden"; 
+    messageElement.style.visibility = "hidden"; // Garante que a mensagem está oculta inicialmente
 
     firebase.auth().onAuthStateChanged(async (user) => {
         if (user) {
@@ -239,21 +238,23 @@ async function initializeConversation() {
                 // Configura o botão "Press to Start" para exibir e falar a mensagem inicial
                 speakButton.innerText = "Press to Start";
                 speakButton.addEventListener("click", () => {
-                    // Torna o texto visível e fala a mensagem inicial
-                    messageElement.style.visibility = "visible";
-                    messageElement.innerText = data.response;
+                    if (speakButton.innerText === "Press to Start") {
+                        messageElement.style.visibility = "visible";
+                        messageElement.innerText = data.response;
 
-                    speak(data.response); // Chama a função para falar a mensagem
-                    speakButton.innerText = "Press to Speak"; // Atualiza o texto do botão
-                }, { once: true }); // Garante que o evento só execute uma vez
-
+                        speak(data.response); // Fala a mensagem inicial
+                        speakButton.innerText = "Press to Speak"; // Atualiza o texto do botão
+                    } else if (speakButton.innerText === "Press to Speak") {
+                        // Inicia reconhecimento de voz
+                        recognition.start();
+                    }
+                });
             } catch (error) {
                 console.error("Error initializing conversation:", error);
                 messageElement.style.visibility = "visible";
                 messageElement.innerText = "Error initializing conversation.";
             }
         } else {
-            // Caso não haja usuário autenticado
             messageElement.style.visibility = "visible";
             messageElement.innerText = "Please log in to start the conversation.";
         }
