--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -147,53 +147,53 @@
             synth.speak(utterance);
         }
 
-        // Reconhecimento de voz
-        function setupSpeechRecognition() {
-            if (!('SpeechRecognition' in window || 'webkitSpeechRecognition' in window)) {
-                alert("Speech recognition is not supported in this browser.");
-                speakButton.disabled = true;
-                return;
-            }
-
-            recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
-            recognition.lang = "en-US";
-
-            recognition.onstart = () => {
-                speakButton.classList.add("listening");
-                speakButton.innerText = "Listening...";
-            };
-
-            recognition.onend = () => {
-                speakButton.classList.remove("listening");
-                speakButton.innerText = "Press to Speak";
-            };
-
-            recognition.onresult = async (event) => {
-    const userSpeech = event.results[0][0].transcript;
-    console.log("User speech:", userSpeech);
-    console.log("User ID:", userId);
-
-    if (!userId) {
-        alert("User ID is missing. Please log in again.");
+       // Reconhecimento de voz
+function setupSpeechRecognition() {
+    if (!('SpeechRecognition' in window || 'webkitSpeechRecognition' in window)) {
+        alert("Speech recognition is not supported in this browser.");
+        speakButton.disabled = true;
         return;
     }
 
-    try {
-        const response = await fetch('/api/chat', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ uid: userId, message: userSpeech, chatHistory }),
-        });
-        const data = await response.json();
-        chatHistory = data.chatHistory;
-        messageElement.innerText = data.response;
-        speak(data.response);
-    } catch (error) {
-        console.error("Error communicating with the server:", error);
-        messageElement.innerText = "Error communicating with the server.";
-       }
-   };
-}
+    recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
+    recognition.lang = "en-US";
+
+    recognition.onstart = () => {
+        speakButton.classList.add("listening");
+        speakButton.innerText = "Listening...";
+    };
+
+    recognition.onend = () => {
+        speakButton.classList.remove("listening");
+        speakButton.innerText = "Press to Speak";
+    };
+
+    recognition.onresult = async (event) => {
+        const userSpeech = event.results[0][0].transcript;
+        console.log("User speech:", userSpeech);
+        console.log("User ID:", userId);
+
+        if (!userId) {
+            alert("User ID is missing. Please log in again.");
+            return;
+        }
+
+        try {
+            const response = await fetch('/api/chat', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ uid: userId, message: userSpeech, chatHistory }),
+            });
+            const data = await response.json();
+            chatHistory = data.chatHistory;
+            messageElement.innerText = data.response;
+            speak(data.response);
+        } catch (error) {
+            console.error("Error communicating with the server:", error);
+            messageElement.innerText = "Error communicating with the server.";
+        }
+    }; // <-- Fechamento correto
+}  // <-- Fechamento correto de setupSpeechRecognition
 
         async function initializeConversation() {
     firebase.auth().onAuthStateChanged(async (user) => {
