--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -195,7 +195,7 @@ function setupSpeechRecognition() {
     }; // <-- Fechamento correto
 }  // <-- Fechamento correto de setupSpeechRecognition
 
-        async function initializeConversation() {
+       async function initializeConversation() {
     firebase.auth().onAuthStateChanged(async (user) => {
         if (user) {
             userId = user.uid; // Pega o ID do usuário autenticado
@@ -206,12 +206,12 @@ function setupSpeechRecognition() {
                 const data = await response.json();
 
                 chatHistory = data.chatHistory;
-                messageElement.innerText = data.response; // Mensagem inicial
-                messageElement.style.visibility = "visible";
 
-                // Configuração do botão "Press to Speak"
+                // Configuração do botão "Press to Start"
                 speakButton.addEventListener("click", () => {
                     if (speakButton.innerText === "Press to Start") {
+                        messageElement.innerText = data.response; // Exibe a mensagem inicial
+                        messageElement.style.visibility = "visible"; // Torna visível
                         speak(data.response); // Fala a mensagem inicial
                         speakButton.innerText = "Press to Speak";
                     } else {
