--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -195,14 +195,19 @@ function setupSpeechRecognition() {
     }; // <-- Fechamento correto
 }  // <-- Fechamento correto de setupSpeechRecognition
 
-       async function initializeConversation() {
+      async function initializeConversation() {
     firebase.auth().onAuthStateChanged(async (user) => {
         if (user) {
             userId = user.uid; // Pega o ID do usuário autenticado
 
+            // Captura os parâmetros 'level' e 'unit' da URL
+            const urlParams = new URLSearchParams(window.location.search);
+            const level = urlParams.get('level') || 'Level1'; // Valor padrão: 'Level1'
+            const unit = urlParams.get('unit') || 'Unit1';   // Valor padrão: 'Unit1'
+
             try {
-                // Inicializa a conversa chamando /api/start
-                const response = await fetch(`/api/start?uid=${userId}`);
+                // Inicializa a conversa chamando /api/start com os parâmetros corretos
+                const response = await fetch(`/api/start?uid=${userId}&level=${level}&unit=${unit}`);
                 const data = await response.json();
 
                 chatHistory = data.chatHistory;
